fix(locale-uk): fix spelling errors and "Server Error" (#1149)

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -315,7 +315,7 @@
 "group_managers" = "Керівництво";
 "group_type" = "Тип спільноти";
 "group_type_open" = "Це відкрита спільнота. В неї може вступити будь-хто охочий.";
-"group_type_closed" = "Це закрита спільноа. Для вступу необхідно подати заявку.";
+"group_type_closed" = "Це закрита спільнота. Для вступу необхідно подати заявку.";
 "creator" = "Автор";
 "administrators" = "Адміністратори";
 "add_to_left_menu" = "Додати до лівого меню";
@@ -455,7 +455,7 @@
 "webcam_avatar" = "Якщо ваш комп'ютер має камерою, Ви можете <a id='_takeSelfie'>зробити миттєву фотографію</a>";
 "publish_on_wall" = "Опублікувати допис на стіні";
 "take_snapshot" = "Зробити знімок";
-"your_browser_doesnt_support_webcam" = "Ваш браузер не підтримує знімання відео з камери."
+"your_browser_doesnt_support_webcam" = "Ваш браузер не підтримує знімання відео з камери.";
 "selected_area_user" = "Обрана область буде відображатися на вашій сторінці.";
 "selected_area_club" = "Обрана область буде показуватися на сторінці спільноти.";
 "selected_area_rotate" = "Якщо орієнтація зображення неправильна, фотографію можна повернути.";
@@ -1363,7 +1363,7 @@
 
 "invalid_club" = "Ця спільнота не існує.";
 "invalid_user" = "Цього користувача не існує.";
-"ignored_sources_limit" = "Перевищено ліміт ігнорованих джерел.";
+"ignored_sources_limit" = "Досягнуто ліміт ігнорованих джерел.";
 
 "invalid_audio" = "Пошкоджене аудіо.";
 "do_not_have_audio" = "У вас немає цього аудіо";
@@ -1439,6 +1439,8 @@
 "error_max_pinned_clubs" = "Знаходитись у лівому меню можуть максимум 10 спільнот";
 "error_viewing_subs" = "Ви не можете переглядати лист підписок $1.";
 "error_status_too_long" = "Статус надто довгий ($1 символів замість 255 символів)";
+"death" = "Смерть...";
+"nehay" = "Нехай живе";
 "user_successfully_banned" = "Користувача успішно заблоковано.";
 
 "content_is_deleted" = "Коментар видалено, а користувач отримав попередження.";
