fix(locale-uk): fix syntax errors that trigger "Server Error"

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -343,14 +343,14 @@
 "suggest_new" = "Запропонувати новину";
 "suggested_by_you_zero" = "$1 запропонованих вами дописів";
 "suggested_by_you_one" = "Один запропонований вами допис";
-"suggested_by_you_few" = $1 запропоновані вами дописи”;
-"suggested_by_you_many" = "$1 запропонованих вами дописів”;
-"suggested_by_you_other" = "$1 запропонованих вами дописів”;
-"suggested_by_everyone_zero" = "$1 запропонованих дописів”;
-"suggested_by_everyone_one" = "Один запропонований допис”;
-"suggested_by_everyone_few" = "$1 запропоновані дописи”;
-"suggested_by_everyone_many" = "$1 запропонованих дописів”;
-"suggested_by_everyone_other" = "$1 запропонованих дописів”;
+"suggested_by_you_few" = "$1 запропоновані вами дописи";
+"suggested_by_you_many" = "$1 запропонованих вами дописів";
+"suggested_by_you_other" = "$1 запропонованих вами дописів";
+"suggested_by_everyone_zero" = "$1 запропонованих дописів";
+"suggested_by_everyone_one" = "Один запропонований допис";
+"suggested_by_everyone_few" = "$1 запропоновані дописи";
+"suggested_by_everyone_many" = "$1 запропонованих дописів";
+"suggested_by_everyone_other" = "$1 запропонованих дописів";
 "group_hide_from_global_feed" = "Не відображати дописи в глобальній стрічці";
 "suggested_posts_by_you" = "Запропоновані вами дописи";
 "suggested_posts_by_everyone" = "Запропоновані дописи";
