dont remove repost when editin'

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -236,6 +236,7 @@
 "clubs_posts" = "Записи сообщества";
 "others_posts" = "Чужие записи";
 "show_more" = "Показать больше";
+"has_repost" = "Содержит репост";
 
 /* Friends */
 
