--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -205,6 +205,7 @@
 "all_news" = "Все новости";
 "posts_per_page" = "Количество записей на странице";
 "show_ignored_sources" = "Показывать игнорируемые источники";
+"auto_scroll" = "Автоматическая прокрутка";
 "attachment" = "Вложение";
 "post_as_group" = "От имени сообщества";
 "comment_as_group" = "От имени сообщества";
