feat(wall): add new route /{type}/{id}/likes

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -272,6 +272,9 @@
 "show_more" = "Show more";
 "has_repost" = "Has repost";
 
+"likers_list" = "Likers list";
+"liked_verb" = "Liked by";
+
 /* Friends */
 
 "friends" = "Friends";
