--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -251,6 +251,9 @@
 "show_more" = "Показать больше";
 "has_repost" = "Содержит репост";
 
+"likers_list" = "Список лайкнувших";
+"liked_verb" = "Понравилось";
+
 /* Friends */
 
 "friends" = "Друзья";
