resolve 73a067a0c5bc281e630f7f027bd7ddc6d4e6263e (locale-uk)

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -202,6 +202,7 @@
 "all_news" = "Усі новини";
 "posts_per_page" = "Кількість записів на сторінці";
 "show_ignored_sources" = "Відображати ігноровані джерела";
+"auto_scroll" = "Автоматичне прокручування";
 "attachment" = "Вкладення";
 "post_as_group" = "Від імені спільноти";
 "comment_as_group" = "Від імені спільноти";
