resolve cf0b4be3fbcdd55826157fd9750563250e7934ad (locale-uk)

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -241,6 +241,9 @@
 "clubs_posts" = "Дописи спільноти";
 "others_posts" = "Чужі дописи";
 "show_more" = "Відобразити більше";
+"has_repost" = "Містить репост";
+"likers_list" = "Список вподобань";
+"liked_verb" = "Сподобалось";
 
 /* Friends */
 
