feat(privacy): add ability to hide your like

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -698,6 +698,7 @@
 "privacy_setting_write_wall" = "Who can publish posts on my wall";
 "privacy_setting_write_messages" = "Who can write messages to me";
 "privacy_setting_view_audio" = "Who can see my audios";
+"privacy_setting_see_likes" = "Who can see my likes";
 "privacy_value_anybody" = "Anybody";
 "privacy_value_anybody_dative" = "Anybody";
 "privacy_value_users" = "OpenVK users";
