feat(music): syncronized lyrics by lrc file format
!!!DRAFT!!!

Co-authored-by: Mikhail Serebryakov <126566943+synzr@users.noreply.github.com>

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -912,6 +912,8 @@
 "audio_popular" = "Popular";
 "audio_search" = "Search";
 
+"sync_lyrics_not_available" = "Syncronized lyrics are not available.";
+
 "my_audios_small" = "My audios";
 "my_playlists" = "My playlists";
 "playlists" = "Playlists";
