fix(locale-uk): fix spelling errors

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -24,11 +24,11 @@
 "failed_to_register" = "Не вдалося зареєструватися";
 "referral_link_invalid" = "Посилання на запрошення недійсне.";
 "registration_disabled" = "Реєстрація вимкнена системним адміністратором.";
-"user_already_exists" = "Користувач з таким e-mail існує.";
+"user_already_exists" = "Користувач із таким e-mail існує.";
 "access_recovery" = "Відновлення доступу";
 "page_access_recovery" = "Відновити доступ до сторінки";
-"access_recovery_info" = "Забули пароль? Не хвилюйтеся, введіть Ваші дані й ми відправимо Вам на e-mail лист з інструкцію для відновлення акаунта.";
-"access_recovery_info_2" = "Введіть Ваш новий пароль. Всі поточні сеанси будуть припинені, а токени доступу анульовані.";
+"access_recovery_info" = "Забули пароль? Не хвилюйтеся, введіть Ваші дані й ми відправимо Вам на e-mail лист з інструкцією для відновлення акаунта.";
+"access_recovery_info_2" = "Введіть Ваш новий пароль. Усі поточні сеанси будуть припинені, а токени доступу анульовані.";
 "reset_password" = "Скинути пароль";
 "2fa_code_2" = "Код двофакторної аутентифікації";
 "password_successfully_reset" = "Ваш пароль був успішно оновлений.";
@@ -36,7 +36,7 @@
 "password_reset_error" = "Непередбачена помилка при скиданні пароля.";
 "password_reset_rate_limit_error" = "Не можна часто надсилати запити на скидання пароля.";
 "email_sent" = "Лист успішно надісланий.";
-"email_sent_desc" = "Якщо Ваша електронна пошта існує, ви отримаєте лист.";
+"email_sent_desc" = "Якщо Ваша електронна пошта існує, Ви отримаєте лист.";
 "email_error" = "Непередбачена помилка під час надсилання листа.";
 "password_reset_rate_limit_error" = "Не можна робити цю дію так часто, вибачте.";
 "email_verify_success" = "Ваш e-mail був підтверджений. Приємного проведення часу!";
@@ -75,7 +75,7 @@
 "nickname" = "Нікнейм";
 "online" = "Онлайн";
 "was_online" = "були в мережі";
-"was_online_m" = "був в мережі";
+"was_online_m" = "був у мережі";
 "was_online_f" = "була в мережі";
 "all_title" = "Все";
 "information" = "Інформація";
@@ -209,7 +209,7 @@
 "add_source" = "Додавання джерела";
 "set_source" = "Зазначити джерело";
 "source" = "Джерело";
-"set_source_tip" = "У випадку використання матеріала(-ів) інших авторів, важливо вказувати посилання на оригінал. <br>Зробити Ви можна нижче.";
+"set_source_tip" = "У випадку використання матеріала(-ів) інших авторів, важливо вказувати посилання на оригінал. <br>Зробити Ви можете нижче.";
 "add_signature" = "Підпис автора";
 "contains_nsfw" = "Містить NSFW-контент";
 "nsfw_warning" = "Цей допис може містити контент 18+";
@@ -299,7 +299,7 @@
 "subscriptions_zero" = "Жодної підписки";
 "subscriptions_one" = "$1 підписка";
 "subscriptions_few" = "$1 підписки";
-"subscriptions_many" = "$1 підписків";
+"subscriptions_many" = "$1 підписок";
 "subscriptions_other" = "$1 підписки";
 "friends_list_online_zero" = "Немає друзів в онлайні";
 "friends_list_online_one" = "У Вас $1 друг онлайн";
@@ -394,7 +394,7 @@
 "group_dont_display_administrators_list" = "Нічого не показувати";
 "group_changeowner_modal_title" = "Передача прав власника";
 "group_changeowner_modal_text" = "Увага! Ви передаєте права власника користувачу $1. Ця дія необоротна. Після передачі Ви залишитеся адміністратором, але Вас можуть виключити.";
-"group_owner_setted" = "Новий власник ($1) успішно призначений для спільноти $2. Вам видано права адміністратора у спільноті. Якщо Ви хочете повернути роль власника, зверніться до <a href='/support?act=new'>технічної підтримки сайта</a>.";
+"group_owner_setted" = "Новий власник ($1) успішно призначений для спільноти $2. Вам видано права адміністратора в спільноті. Якщо Ви хочете повернути роль власника, зверніться до <a href='/support?act=new'>технічної підтримки сайта</a>.";
 "participants_zero" = "Жодного учасника";
 "participants_one" = "Один учасник";
 "participants_few" = "$1 учасника";
@@ -419,7 +419,7 @@
 "search_by_groups" = "Пошук за спільнотами";
 "search_group_desc" = "Тут Ви можете переглянути існуючі спільноти та обрати спільноту до вподоби.";
 "group_banned" = "Спільнота <b>$1</b> заблокована.";
-"error_suggestions" = "Помилка доступу к пропозиційній";
+"error_suggestions" = "Помилка доступу до пропозиційної";
 "error_suggestions_closed" = "Ця спільнота має закриту стіну.";
 "error_suggestions_open" = "Ця спільнота має відкриту стіну.";
 "error_suggestions_access" = "Переглядати запропоновані дописи можуть тільки адміністратори спільноти.";
@@ -495,7 +495,7 @@
 "supported_formats" = "Підтримувані формати зображень: JPG, PNG та GIF.";
 "max_load_photos" = "Ви можете завантажити до 10 фотографій за один раз.";
 "tip" = "Порада";
-"tip_ctrl" = "щоб обрати кілька фотографій одразу, утримуючи клавішу Ctrl під час вибору файлів в Windows та Linux чи клавішу CMD у Mac OS.";
+"tip_ctrl" = "щоб обрати кілька фотографій одразу, утримуючи клавішу Ctrl під час вибору файлів у Windows та Linux чи клавішу CMD у Mac OS.";
 "album_poster" = "Обкладинка альбома";
 "select_photo" = "Оберіть фотографію";
 "upload_new_photo" = "Завантажте нову світлину";
@@ -521,7 +521,7 @@
 "create_note" = "Створити нотатку";
 "edit_note" = "Редагувати нотатку";
 "actions" = "Дії";
-"notes_start_screen" = "З допомогою нотаток Ви можете ділитися подіями з життя з друзями чи знати що відбувається у них.";
+"notes_start_screen" = "З допомогою нотаток Ви можете ділитися подіями із життя з друзями чи знати, що відбувається в них.";
 "note_preview" = "Попередній перегляд";
 "note_preview_warn" = "Увага: Це лише попередній перегляд";
 "note_preview_warn_details" = "Після збереження, нотатки можуть мати інший вигляд. Також не викликайте перегляд занадто часто.";
@@ -603,7 +603,7 @@
 "contacts" = "Контакти";
 "avatar" = "Аватар";
 "privacy" = "Приватність";
-"interface" = "Зовнішній вид";
+"interface" = "Зовнішній вигляд";
 "security" = "Безпека";
 "profile_picture" = "Зображення сторінки";
 "picture" = "Зображення";
@@ -685,7 +685,7 @@
 "email_change_confirm_message" = "Щоб зміни набули чинності, підтвердьте Вашу нову адресу електронної пошти. Ми надіслали інструкцію в поштову скриньку.";
 "profile_deactivate" = "Видалення сторінки";
 "profile_deactivate_button" = "Видалити сторінку";
-"profile_deactivate_header" = "Ми шкодуємо, що Ви бажаєте видалити свою сторінку. За бажання, можна вказати причину видалення та Ваше повідомлення з цього приводу. Ми читаємо Ваші відгуки та намагаємося зробити сайт кращим!";
+"profile_deactivate_header" = "Ми шкодуємо, що Ви бажаєте видалити свою сторінку. За бажання, можна вказати причину видалення та Ваше повідомлення із цього приводу. Ми читаємо Ваші відгуки та намагаємося зробити сайт кращим!";
 "profile_deactivate_reason_header" = "Будь ласка, вкажіть причину видалення Вашої сторінки";
 "profile_deactivate_reason_1" = "У мене є інший обліковий запис на сайті";
 "profile_deactivate_reason_1_text" = "Я створив нову сторінку, і тепер хочу стерти своє минуле.";
@@ -723,9 +723,9 @@
 /* Two-factor authentication */
 
 "two_factor_authentication" = "Двофакторна автентифікація";
-"two_factor_authentication_disabled" = "Забезпечує надійний захист від злому: для входу в сторінку необхідно ввести код, отриманий в додатку 2FA.";
+"two_factor_authentication_disabled" = "Забезпечує надійний захист від злому: для входу в сторінку необхідно ввести код, отриманий у 2FA застосунку.";
 "two_factor_authentication_enabled" = "Двофакторна автентифікація увімкнена. Ваша сторінка захищена.";
-"two_factor_authentication_login" = "У вас увімкнена двофакторна автентифікація. Для входу введіть код отриманий в додатку.";
+"two_factor_authentication_login" = "У вас увімкнена двофакторна автентифікація. Для входу введіть код отриманий у додатку.";
 "two_factor_authentication_settings_1" = "Двофакторну автентифікацію через TOTP можна використовувати навіть без інтернету. Для цього Вам знадобиться застосунок для генерації кодів, наприклад <b>Google Authenticator</b> для Android та iOS або <b>Aegis Authenticator</b> чи <b>andOTP</b> для Android. Важливо: на пристрої має бути точна дата та час.";
 "two_factor_authentication_settings_2" = "Використовуючи застосунок для двофакторної автентифікації, проскануйте наведений нижче QR-код:";
 "two_factor_authentication_settings_3" = "або вручну введіть секретний ключ: <b>$1</b>.";
