fix(locale-uk): fix spelling errors

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -725,7 +725,7 @@
 "two_factor_authentication" = "Двофакторна автентифікація";
 "two_factor_authentication_disabled" = "Забезпечує надійний захист від злому: для входу в сторінку необхідно ввести код, отриманий у 2FA застосунку.";
 "two_factor_authentication_enabled" = "Двофакторна автентифікація увімкнена. Ваша сторінка захищена.";
-"two_factor_authentication_login" = "У вас увімкнена двофакторна автентифікація. Для входу введіть код отриманий у додатку.";
+"two_factor_authentication_login" = "У Вас увімкнена двофакторна автентифікація. Для входу введіть код отриманий у застосунку.";
 "two_factor_authentication_settings_1" = "Двофакторну автентифікацію через TOTP можна використовувати навіть без інтернету. Для цього Вам знадобиться застосунок для генерації кодів, наприклад <b>Google Authenticator</b> для Android та iOS або <b>Aegis Authenticator</b> чи <b>andOTP</b> для Android. Важливо: на пристрої має бути точна дата та час.";
 "two_factor_authentication_settings_2" = "Використовуючи застосунок для двофакторної автентифікації, проскануйте наведений нижче QR-код:";
 "two_factor_authentication_settings_3" = "або вручну введіть секретний ключ: <b>$1</b>.";
@@ -1160,7 +1160,7 @@
 "report_question_text" = "Що саме Ви вважаєте неприпустимим у цьому матеріалі?";
 "report_reason" = "Причина скарги";
 "reason" = "Причина";
-"going_to_report_app" = "Ви збираєтеся поскаржитися на цей додаток.";
+"going_to_report_app" = "Ви збираєтеся поскаржитися на цей застосунок.";
 "going_to_report_club" = "Ви збираєтеся поскаржитися на цю спільноту.";
 "going_to_report_photo" = "Ви збираєтеся поскаржитися на цю фотографію.";
 "going_to_report_user" = "Ви збираєтеся поскаржитися на цього користувача.";
@@ -1882,16 +1882,16 @@
 "tour_section_13_bottom_text_3" = "<b>Зверніть увагу: </b>Якщо ви вже активували ваучер на цьому акаунті, його не можна повторно використати.";
 
 "tour_section_14_title_1" = "Мобільна версія";
-"tour_section_14_text_1" = "Наразі мобільної вебверсії сайту поки що немає, проте є мобільний додаток для Android";
-"tour_section_14_text_2" = "OpenVK Legacy — це мобільний додаток OpenVK для пристроїв на базі Android із дизайном ВКонтакті 3.0.4 2013 року";
+"tour_section_14_text_1" = "Наразі мобільної вебверсії сайту поки що немає, проте є мобільний застосунок для Android";
+"tour_section_14_text_2" = "OpenVK Legacy — це мобільний застосунок OpenVK для пристроїв на базі Android із дизайном ВКонтакті 3.0.4 2013 року";
 "tour_section_14_text_3" = "Мінімально підтримуваною версією є Android 2.1 Eclair, тобто апарати часів початку 2010-их стануть у пригоді.";
 
 "tour_section_14_title_2" = "Де це можна завантажити?";
 "tour_section_14_text_2_1" = "Релізні версії завантажуються через офіційний репозиторій F-Droid";
 "tour_section_14_text_2_2" = "Якщо Ви бета-тестувальник програми, то нові версії програми викладаються в окремий канал оновлення";
-"tour_section_14_text_2_3" = "<b>Важливо: </b>Додаток може мати різні помилки та недоліки, про помилки повідомляйте в <a href='/app'>офіційну спільноту додатка</a>";
+"tour_section_14_text_2_3" = "<b>Важливо: </b>Застосунок може мати різні помилки та недоліки, про помилки повідомляйте в <a href='/app'>офіційну спільноту додатка</a>";
 
-"tour_section_14_bottom_text_1" = "Скріншоти застосунку";
+"tour_section_14_bottom_text_1" = "Скріншоти застосунка";
 "tour_section_14_bottom_text_2" = "На цьому екскурсія сайтом завершена. Якщо ви хочете спробувати наш мобільний застосунок, створити тут свою спільноту, покликати своїх друзів чи знайти нових, або взагалі просто якось розважитися, то це можна зробити просто зараз, пройшовши невелику <a href='/reg'>реєстрацію</a>";
 "tour_section_14_bottom_text_3" = "На цьому екскурсія сайтом завершена.";
 
