fix(locale-uk): fix spelling errors

--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -27,8 +27,8 @@
 "user_already_exists" = "Користувач із таким e-mail існує.";
 "access_recovery" = "Відновлення доступу";
 "page_access_recovery" = "Відновити доступ до сторінки";
-"access_recovery_info" = "Забули пароль? Не хвилюйтеся, введіть Ваші дані й ми відправимо Вам на e-mail лист з інструкцією для відновлення акаунта.";
-"access_recovery_info_2" = "Введіть Ваш новий пароль. Усі поточні сеанси будуть припинені, а токени доступу анульовані.";
+"access_recovery_info" = "Забули пароль? Не хвилюйтеся, введіть необхідні дані й ми відправимо на e-mail лист, з інструкцією для відновлення доступа.";
+"access_recovery_info_2" = "Введіть новий пароль. Усі поточні сеанси будуть припинені, а токени доступу анульовані.";
 "reset_password" = "Скинути пароль";
 "2fa_code_2" = "Код двофакторної аутентифікації";
 "password_successfully_reset" = "Ваш пароль був успішно оновлений.";
@@ -243,7 +243,7 @@
 "show_more" = "Відобразити більше";
 "has_repost" = "Містить репост";
 "likers_list" = "Список вподобань";
-"liked_verb" = "Сподобалось";
+"liked_verb" = "Вподобали";
 
 "liked_by_x_people_one" = "Вподобав $1 користувач";
 "liked_by_x_people_few" = "Вподобали $1 користувача";
@@ -1026,7 +1026,7 @@
 "failed_to_increase_rating" = "Не вдалося підвищити рейтинг";
 "rating_increase_successful" = "Ви підвищили рейтинг <b><a href=\"$1\">$2</a></b> на <b>$3%</b>.";
 "negative_rating_value" = "Значення не може бути від'ємним.";
-"increased_your_rating_by" = "підвищив  рейтинг на";
+"increased_your_rating_by" = "підвищив рейтинг на";
 
 /* Gifts */
 
@@ -1047,7 +1047,7 @@
 "collections" = "Колекції";
 "confirm" = "Підтвердження";
 "as_anonymous" = "Анонімно";
-"gift_your_message" = "е повідомлення";
+"gift_your_message" = "Повідомлення";
 "free_gift" = "Безоплатно";
 "coins" = "Голоси";
 "coins_zero" = "0 голосів";
@@ -1076,8 +1076,8 @@
 "app_enabled" = "Увімкнено";
 "app_creation_hint_url" = "Вкажіть в URL точну адресу разом зі схемою (https), портом (80) та потрібними параметрами запиту.";
 "app_creation_hint_iframe" = " застосунок буде відкритий в iframe.";
-"app_balance" = "На рахунку ого застосунку <b>$1</b> голосів.";
-"app_users" = "им застосунком користуються <b>$1</b> користувачів.";
+"app_balance" = "На рахунку цього застосунку <b>$1</b> голосів.";
+"app_users" = "Цим застосунком користуються <b>$1</b> користувачів.";
 "app_withdrawal" = "Виведення коштів";
 "app_withdrawal_q" = "вивести?";
 "app_withdrawal_empty" = "Не вдалося вивести: значення не може бути пустим.";
@@ -1089,14 +1089,14 @@
 "appjs_payment_confirm" = "Сплатити";
 "appjs_err_funds" = "Не вдалося сплатити покупку: недостатньо коштів.";
 "appjs_wall_post" = "Опублікувати допис";
-"appjs_wall_post_desc" = "хоче опублікувати на ій стіні допис";
-"appjs_act_friends" = "їм Друзям";
-"appjs_act_friends_desc" = "додавати користувачів у друзі та читати  список друзів";
-"appjs_act_wall" = "ій Стіні";
-"appjs_act_wall_desc" = "дивитися Ваші новини, Вашу стіну та створювати на ній дописи";
+"appjs_wall_post_desc" = "хоче опублікувати на Вашій стіні допис";
+"appjs_act_friends" = "Вашим друзям";
+"appjs_act_friends_desc" = "додавати користувачів у друзі та читати список друзів";
+"appjs_act_wall" = "Вашій стіні";
+"appjs_act_wall_desc" = "переглядати Ваші новини, Вашу стіну та створювати на ній дописи";
 "appjs_act_messages" = "Вашим повідомленням";
 "appjs_act_messages_desc" = "читати та писати від Вашого імені повідомлення";
-"appjs_act_groups" = "Вашим Спільнотам";
+"appjs_act_groups" = "Вашим спільнотам";
 "appjs_act_groups_desc" = "дивитися список Ваших спільнот та підписувати вас на інші";
 "appjs_act_likes" = "функціоналу Лайків";
 "appjs_act_likes_desc" = "ставити та прибирати позначки \"мені подобається\" із записів";
@@ -1180,7 +1180,7 @@
 "you_can_close_this_ticket_1" = "Якщо ви не маєте запитань, Ви можете ";
 "you_can_close_this_ticket_2" = "закрити це звернення";
 "agent_profile_created_1" = "Профіль створено";
-"agent_profile_created_2" = "Тепер користувачі бачать  псевдонім і аватар замість стандартного поличчя та ID.";
+"agent_profile_created_2" = "Тепер користувачі бачать псевдонім і аватар замість стандартного поличчя та ID.";
 "agent_profile_edited" = "Профіль відредагований";
 "agent_profile" = "Картка агента";
 
@@ -1742,7 +1742,7 @@
 "helpdesk_negative_answers" = "негативних відгуків";
 "helpdesk_showing_name" = "Зображуване ім'я";
 "helpdesk_avatar_url" = "Посилання на аватар";
-"email_rate_limit_error" = "Не можна робити це так часто.";
+"email_rate_limit_error" = "Не можна робити цю дію часто.";
 "gifts_left_zero" = "Залишилось 0 подарунків";
 "helpdesk_all_answers" = "всі відповіді";
 "helpdesk_show_number" = "Показувати номер";
